--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -371,6 +371,8 @@ Performance</div>
 <script type="text/javascript" src="./js/backbone-min.js"></script>
 <script type="text/javascript" src="./js/bootstrap-select.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
+<script src="./htmlpreview.min.js"></script>
+	<script>HTMLPreview.init();</script>
 
 </body>
 </html>
