--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap-select.css">
-    <link rel="stylesheet" type="text/css" href="./bootstrap/bootstrap3-editable/bootstrap3-editable/css/bootstrap-editable.css">
-    <link rel="stylesheet" type="text/css" href="./css/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-select.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap3-editable/bootstrap3-editable/css/bootstrap-editable.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link async href="http://fonts.googleapis.com/css?family=Delius" rel="stylesheet" type="text/css"/>
     
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Testing for Android</title>
 </head>
 <body>
@@ -362,16 +362,16 @@ Performance</div>
 </body>
 
 
-<script type="text/javascript" src="./js/jquery.js"></script>
-<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="./bootstrap/bootstrap3-editable/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-<script type="text/javascript" src="./js/jquery.mockjax.js"></script>
-<script type="text/javascript" src="./js/jquery.mockjax.js"></script>
-<script type="text/javascript" src="./js/underscore-min.js"></script>
-<script type="text/javascript" src="./js/backbone-min.js"></script>
-<script type="text/javascript" src="./js/bootstrap-select.js"></script>
-<script type="text/javascript" src="./js/script.js"></script>
-<script type="text/javascript" src="./js/htmlpreview.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bootstrap/bootstrap3-editable/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+<script type="text/javascript" src="js/jquery.mockjax.js"></script>
+<script type="text/javascript" src="js/jquery.mockjax.js"></script>
+<script type="text/javascript" src="js/underscore-min.js"></script>
+<script type="text/javascript" src="js/backbone-min.js"></script>
+<script type="text/javascript" src="js/bootstrap-select.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/htmlpreview.min.js"></script>
 	<script>HTMLPreview.init();</script>
 
 </body>
