--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link async href="http://fonts.googleapis.com/css?family=Delius" rel="stylesheet" type="text/css"/>
     
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 <title>Testing for Android</title>
 </head>
 <body>
