--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -362,7 +362,8 @@ Performance</div>
 </body>
 
 
-<script type="text/javascript" src="js/jquery.js"></script>
+<!--<script type="text/javascript" src="js/jquery.js"></script>!-->
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="bootstrap/bootstrap3-editable/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 <script type="text/javascript" src="js/jquery.mockjax.js"></script>
