--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -373,6 +373,10 @@ Performance</div>
 <script type="text/javascript" src="js/bootstrap-select.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/htmlpreview.min.js"></script>
+<script>
+	
+	alert('hello');
+</script>
 	<script>HTMLPreview.init();</script>
 
 </body>
