--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -364,13 +364,13 @@ Performance</div>
 
 <!--<script type="text/javascript" src="js/jquery.js"></script>!-->
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="bootstrap/bootstrap3-editable/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-<script type="text/javascript" src="js/jquery.mockjax.js"></script>
-<script type="text/javascript" src="js/jquery.mockjax.js"></script>
-<script type="text/javascript" src="js/underscore-min.js"></script>
-<script type="text/javascript" src="js/backbone-min.js"></script>
-<script type="text/javascript" src="js/bootstrap-select.js"></script>
+<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./bootstrap/bootstrap3-editable/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+<script type="text/javascript" src="./js/jquery.mockjax.js"></script>
+<script type="text/javascript" src="./js/jquery.mockjax.js"></script>
+<script type="text/javascript" src="./js/underscore-min.js"></script>
+<script type="text/javascript" src="./js/backbone-min.js"></script>
+<script type="text/javascript" src="./js/bootstrap-select.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
 <script type="text/javascript" src="./js/htmlpreview.min.js"></script>
 	<script>HTMLPreview.init();</script>
