Made the startup and index htmls responsive for smartphones as well

--- a/android_app_test/updated/dev/startup.html
+++ b/android_app_test/updated/dev/startup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-select.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap3-editable/bootstrap3-editable/css/bootstrap-editable.css">
@@ -26,7 +28,7 @@
 	</div>
 	<div class="search-bar-wrapper">
 		<div class="input-wrapper">
-			<input type="text" class="search-input-big" placeholder="Please enter your app name" />
+			<input type="text" class="search-input-big" placeholder="Enter your app" />
 			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
 		</div>
 	</div>
@@ -42,6 +44,7 @@
 <script type="text/javascript" src="js/underscore-min.js"></script>
 <script type="text/javascript" src="js/backbone-min.js"></script>
 <script type="text/javascript" src="js/bootstrap-select.js"></script>
+<script type="text/javascript" src="./js/responsive_classes.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 
 </body>
