--- a/android_app_test/updated/dev/index.html
+++ b/android_app_test/updated/dev/index.html
@@ -372,6 +372,7 @@ Performance</div>
 <script type="text/javascript" src="./js/underscore-min.js"></script>
 <script type="text/javascript" src="./js/backbone-min.js"></script>
 <script type="text/javascript" src="./js/bootstrap-select.js"></script>
+<script type="text/javascript" src="./js/responsive_classes.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
 
 <script type="text/javascript" src="./js/htmlpreview.min.js"></script>
