added global search class in main search app section

--- a/web/src/main/webapp/static/index.html
+++ b/web/src/main/webapp/static/index.html
@@ -39,7 +39,7 @@
 	</div>
 		</div>
 	</div>
-	<div class="search-bar-wrapper">
+	<div class="search-bar-wrapper global-search">
 		<div class="input-wrapper">
 			<input type="text" class="search-input-big" placeholder="Enter your app" />
 			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
