REST api support for profiling calls

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -11,10 +11,18 @@
     <link async href="http://fonts.googleapis.com/css?family=Delius" rel="stylesheet" type="text/css"/>
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
-<title>MX</title>
+	<title>MX</title>
 </head>
 <body>
-<div class="container-wrapper-start-up container-wrapper">
+<div class="container-android-path">
+	<div class="search-bar-wrapper">
+		<div class="input-wrapper">
+			<input type="text" class="search-input-big" placeholder="Set Android Path" />
+			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
+		</div>
+	</div>
+</div>
+<div class="container-wrapper-start-up container-wrapper hide-this">
 	<div class="container-start-up-content">
 		<p>Please connect your phone to the comptuer</p>
 	</div>
