added json support

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -14,15 +14,15 @@
 	<title>MX</title>
 </head>
 <body>
-<div class="container-android-path">
+<!-- <div class="container-android-path">
 	<div class="search-bar-wrapper">
 		<div class="input-wrapper">
 			<input type="text" class="search-input-big" placeholder="Set Android Path" />
 			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
 		</div>
 	</div>
-</div>
-<div class="container-wrapper-start-up container-wrapper hide-this">
+</div>  -->
+<div class="container-wrapper-start-up container-wrapper">
 	<div class="container-start-up-content">
 		<p>Please connect your phone to the comptuer</p>
 	</div>
@@ -39,6 +39,16 @@
 			<input type="text" class="search-input-big" placeholder="Enter your app" />
 			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
 		</div>
+	</div>
+</div>
+
+<div class="container-packages hide-this">
+	<div class="packages">
+		<div class="input-wrapper">
+			<input type="text" class="search-input-big" placeholder="Enter your app" />
+			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
+		</div>
+		<span class="package-list">test</span>
 	</div>
 </div>
 </body>
