added ui support for api to start profiling

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -14,31 +14,9 @@
 	<title>MX</title>
 </head>
 <body>
-<!-- <div class="container-android-path">
-	<div class="search-bar-wrapper">
-		<div class="input-wrapper">
-			<input type="text" class="search-input-big" placeholder="Set Android Path" />
-			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
-		</div>
-	</div>
-</div>  -->
 <div class="container-wrapper-start-up container-wrapper">
 	<div class="container-start-up-content">
 		<p>Please connect your phone to the comptuer</p>
-	</div>
-</div>
-<div class="container-wrapper-search-app hide-this">
-	<div class="connected-device-section">
-		<span class="activated-col">
-			<label class="activated-lable-value">Connected Device : </label>
-			<span class="activated-text activated-device-name">Samsung S3</span>
-		</span>
-	</div>
-	<div class="search-bar-wrapper">
-		<div class="input-wrapper">
-			<input type="text" class="search-input-big" placeholder="Enter your app" />
-			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
-		</div>
 	</div>
 </div>
 
@@ -49,6 +27,16 @@
 			<button class="search-start-button"><i class="fa fa-play-circle"></i></button>
 		</div>
 		<span class="package-list">test</span>
+	</div>
+</div>
+
+
+<div class="container-stop-profile hide-this">
+	<div class="stop-profile">
+		<div class="input-wrapper">
+			<span class="profile-data">Start using the App, and then stop profiling</span>
+			<button class="stop-button"><i class="fa fa-play-circle"></i></button>
+		</div>
 	</div>
 </div>
 </body>
