changes for showing loading icon and fixing generated Jar file name issue.

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -14,6 +14,9 @@
 	<title>MX</title>
 </head>
 <body>
+<div id="LoadingImage" style="display: none">
+	<img width="35px" height="35px" alt="Please wait , Loading..." src="images/ajax-loader.gif" />
+</div>
 <div class="container-wrapper-start-up container-wrapper">
 	<div class="container-start-up-content">
 		<p>Please connect your phone to the comptuer</p>
