fix for stop container does not remove css class

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -36,7 +36,7 @@
 
 <div class="container-stop-profile hide-this">
 	<div class="stop-profile">
-		<div class="input-wrapper">
+		<div>
 			<span class="profile-data">Start using the App, and then stop profiling</span>
 			<button class="stop-button"><i class="fa fa-play-circle"></i></button>
 		</div>
