changes to show profiling data, when clicked on stop profiling

--- a/web/src/main/webapp/static/startup.html
+++ b/web/src/main/webapp/static/startup.html
@@ -37,9 +37,16 @@
 <div class="container-stop-profile hide-this">
 	<div class="stop-profile">
 		<div>
-			<span class="profile-data">Start using the App, and then stop profiling</span>
+			<span>Start using the App, and then stop profiling</span>
 			<button class="stop-button"><i class="fa fa-play-circle"></i></button>
 		</div>
+	</div>
+</div>
+
+<div class="container-profile-data hide-this">
+	<div>
+		Profiling Data : <span class="profile-data"></span>
+		<p>	<a href="startup.html">Come Again</a> </p>
 	</div>
 </div>
 </body>
